# music

./: LICENSE  README.md  multi_parafac.yml  parafac.yml  pyproject.toml
multi_parafac/: ._output  ._parafac  ._tests  SynthData.ipynb  pseudobulk_tutorial.ipynb
multi_parafac/parafac/: gpu.py  models.py  plots.py  synthetic.py  tests.py  training.py  training_slurm.py
multi_parafac/tests/: test_tensor_test.py
