[tool.poetry]
name = "multi-parafac"
version = "0.1.0"
description = ""
authors = ["kdeazevedo <deazevedo@med.uni-frankfurt.de>"]
readme = "README.md"
packages = [{include = "multi_parafac"}]

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "<=2.0.0"
#pyslurm = {git = "https://github.com/PySlurm/pyslurm.git", rev = "21.8.x"}
torch = ">=2.0.0, !=2.0.1"
mudata = "^0.2.3"
hdbscan = "^0.8.33"
leidenalg = "^0.10.2"
pynndescent = "^0.5.11"
scikit-learn = "^1.4.0"
scanpy = "^1.9.8"

[tool.poetry.group.dev.dependencies]
pyro-ppl = "^1.8.6"
numpy = "^1.25.1"
seaborn = ">=0.12.2"
graphviz = "^0.20.1"
scikit-learn = "^1.3.0"
jupyterlab = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
